# wasmi

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/arena/: Cargo.toml
crates/arena/src/: component_vec.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: lib.rs
crates/wasi/src/snapshots/: preview_1.rs
crates/wasi/tests/: wasi_wat.rs
crates/wasmi/: Cargo.toml
crates/wasmi/benches/: benches.rs
crates/wasmi/benches/bench/: mod.rs
crates/wasmi/src/: externref.rs  global.rs  instance.rs  store.rs  table.rs
crates/wasmi/src/engine/: code_map.rs  func_types.rs  mod.rs
crates/wasmi/src/func/: mod.rs
crates/wasmi/src/instance/: mod.rs
crates/wasmi/src/memory/: buffer.rs  data.rs  mod.rs
crates/wasmi/src/table/: element.rs  mod.rs
crates/wasmi/tests/e2e/v1/: func.rs  host_calls_wasm.rs  resumable_call.rs
crates/wasmi/tests/spec/: context.rs  error.rs  mod.rs  run.rs
